--- a/src/components/thread/ThreadPanel.scss
+++ b/src/components/thread/ThreadPanel.scss
@@ -137,7 +137,7 @@
 
   &__started-by {
     display: block;
-    font-size: $text-xs;
+    font-size: $text-sm;
     color: var(--text-subtle);
     margin-top: 2px;
 
